--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
-
+    <link rel="shortcut icon" href="modern logo .png" type="image/x-icon">
     <!-- linking google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Monda:wght@400..700&display=swap" rel="stylesheet">
 
-    <title>mobile-web</title>
+    <title>SAKSHAM STUDY POINT</title>
 </head>
 
 <body>
