--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                     <p class="nv-opt">HOME</p>
                     <p class="nv-opt op">COURSES</p>
                     <p class="nv-opt op">ABOUT-US</p>
-                    <a href="/my web project/login.html">LOGIN</a>
-                    <a href="/my web project/signup.html">SIGNUP</a>
+                    <a href="./login.html">LOGIN</a>
+                    <a href="./signup.html">SIGNUP</a>
                 </ul>
             </div>
         </div>
